--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h2>Thành Viên Nhóm 2</h2>
-        <table class="table">
+        <table class="table" border="1">
             <thead>
             </thead>
             <tbody class="tbody">
@@ -34,7 +34,7 @@
                         1
                     </td>
                     <td>
-                        Bùi Anh Dũng
+                        <a href="BAD.html">Bùi Anh Dũng</a>
                     </td>
                     <td>
                         65A.CNTT
@@ -45,72 +45,57 @@
                 </tr>
                 <tr>
                     <td>
-                        1
+                        2
                     </td>
                     <td>
-                        Bùi Anh Dũng
-                    </td>
+                        <a href="LTD.html">Lê Đăng Tấn</a> </td>
                     <td>
                         65A.CNTT
                     </td>
                     <td>
-                        11236082
+                        11236199
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        1
+                        3
                     </td>
                     <td>
-                        Bùi Anh Dũng
+                        <a href="PTA.html">Phạm Tuấn Anh</a>
                     </td>
                     <td>
                         65A.CNTT
                     </td>
                     <td>
-                        11236082
+                        11236058
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        1
+                        4
                     </td>
                     <td>
-                        Bùi Anh Dũng
+                        <a href="PMN.html">Phạm Minh Nhật</a>
                     </td>
                     <td>
                         65A.CNTT
                     </td>
                     <td>
-                        11236082
+                        11236174
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        1
+                        5
                     </td>
                     <td>
-                        Bùi Anh Dũng
-                    </td>
-                    <td>
-                        65A.CNTT
-                    </td>
-                    <td>
-                        11236082
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        1
-                    </td>
-                    <td>
-                        Bùi Anh Dũng
+                        <a href="NQS.html">Nguyễn Quang Sơn</a>
                     </td>
                     <td>
                         65A.CNTT
                     </td>
                     <td>
-                        11236082
+                        11236195
                     </td>
                 </tr>
             </tbody>
