--- a/PMN.html
+++ b/PMN.html
@@ -102,7 +102,7 @@
         <hr>
         <section>
           <h2>Dự án đã thực hiện</h2>
-          <img src="data/web.png" alt="Education" style="float: right; width: 20em; margin-left: 10px;" />
+          <a href="https://excellmao.github.io/Nhom-8---TKWeb/"><img src="data/web.png" alt="Education" style="float: right; width: 20em; margin-left: 10px;" /></a>
           <h3>Trang web trắc nghiệm MBTI</h3>
           <p>Developer, Tester</p>
           <a href="https://github.com/excellmao/Nhom-8---TKWeb" target="_blank">Xem trên GitHub</a>
