--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                         2
                     </td>
                     <td>
-                        <a href="LTD.html">Lê Đăng Tấn</a> </td>
+                        <a href="LDT.html">Lê Đăng Tấn</a> </td>
                     <td>
                         65A.CNTT
                     </td>
